# ml-skeleton-py

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.api  Dockerfile.jupyter  HOWTO.md  LICENSE  Makefile  README.md  config.py  cookiecutter.json  docker-compose.yml  my_program.py  pre-commit-hook-install.sh  pre-commit-hook.sh  pyproject.toml  requirements-spark.txt  requirements.txt  scrapy.cfg  settings.toml  settings.yaml  setup.py  swagger_specification.json  swagger_specification.yaml  tox.ini
.github/actions/: action-docker.yml  action.yml
.github/workflows/: build-and-release.yml  ci.yml  ml-pipeline.yml  ml-skeleton-py.yml  (+3 more)
docker/: Dockerfile.api  Dockerfile.jupyter  Dockerfile.test  action.yml  jupyter.Dockerfile  serve.Dockerfile  test.Dockerfile
dockerfiles/: Dockerfile.api  Dockerfile.jupyter
ml_skeleton_py/: __init__.py  settings.py
notebooks/: Credit Fraud  __ Dealing with Imbalanced Datasets.ipynb  data_transform.gv  generate_sample_dataset.ipynb  modelling_report.ipynb  predictions.gv
openapi/: prediction-api.yaml
reports/: predictions.gv
scripts/: api.py  deploy_endpoint.py  generate_dataset.py  linting.py  predict.py  preprocess_wk.py  scrape.py  test_endpoint.py  train.py  unit_tests.py
src/: __init__.py  settings.py
tests/: conftest.py  test_acceptance.py  test_data.py  test_generate_data.py  test_generate_dataset.py  test_model_error.py  test_predict.py  test_templating.py  test_train.py
{{ cookiecutter.repo_name }}/: .env  .gitignore  Makefile  README.md  requirements.txt  tox.ini
(+36 files in other folders)
