[tool.poetry]
name = "ml-skeleton-py"
version = "0.0.1"
description = "A Python ML framework"
authors = ["dataroots <info@dataroots.io>"]
maintainers = ["dataroots <info@dataroots.io>"]
readme = "README.md"
homepage = "dataroots.io"
repository = "https://github.com/datarootsio/ml-skeleton-py"
documentation = "https://github.com/datarootsio/ml-skeleton-py/blob/master/HOWTO.md"
keywords = ["dataroots",
            "machine learning",
            "skeleton",
            "framework",
            "virtual environment",
            "package"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
python-dotenv = "^0.14.0"
numpy = "^1.19.1"
pandas = "^1.1.0"
imblearn = "^0.0"
flake8 = "^3.8.3"
flake8-annotations = "^2.3.0"
coverage = "^5.2.1"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
